[package]
name = "pump_fun_rust_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18" # Added missing dependency
crossbeam-channel = "0.5" # Added missing dependency
borsh = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] } # Added native-tls for wss
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
bs58 = "0.5"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] } # Added chrono for logger
url = "2.5" # For URL parsing, often needed with websockets/RPC

# For gRPC (Geyser client) - will uncomment when implementing Geyser
# tonic = "0.11"
# prost = "0.12"

# [build-dependencies]
# tonic-build = { version = "0.11", features = ["prost"] }


